--- a/index.html
+++ b/index.html
@@ -55,23 +55,18 @@
     }
 
     #oracleGlyph {
-      font-size: 1.75rem;
+      font-size: 1.5rem;
       margin-bottom: 1rem;
-      color: rgba(255, 255, 255, 0.6);
+      color: rgba(255, 255, 255, 0.35);
       text-decoration: none;
-      animation: pulse-oracle 4s ease-in-out infinite;
-      transition: transform 0.3s ease;
+      transition: all 0.3s ease;
+      cursor: pointer;
     }
 
     #oracleGlyph:hover {
+      color: rgba(255, 255, 255, 0.8);
       transform: scale(1.2);
-      color: #fff;
-    }
-
-    @keyframes pulse-oracle {
-      0%   { opacity: 0.4; transform: scale(1); }
-      50%  { opacity: 1; transform: scale(1.1); }
-      100% { opacity: 0.4; transform: scale(1); }
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.2);
     }
 
     h1 {
@@ -83,9 +78,11 @@
 
     .nav {
       display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
+      gap: 1rem;
+      flex-direction: row;
     }
 
     .nav a {
@@ -96,12 +93,26 @@
       border-radius: 5px;
       font-size: 1.1rem;
       transition: all 0.3s ease;
-      min-width: 160px;
+      min-width: 120px;
+      text-align: center;
     }
 
     .nav a:hover {
       background-color: rgba(255, 255, 255, 0.1);
       transform: scale(1.05);
+    }
+
+    @media (max-width: 500px) {
+      .nav {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1rem 2rem;
+        max-width: 300px;
+      }
+
+      .nav a {
+        flex: 1 1 calc(50% - 1rem);
+      }
     }
 
     footer {
@@ -119,7 +130,7 @@
   <div class="mist-overlay"></div>
 
   <div class="content">
-    <!-- Centered glyph link -->
+    <!-- Glyph above title (easter egg but visible) -->
     <a href="sigil-oracle.html" id="oracleGlyph" title="Open the Oracle">✶</a>
 
     <h1>Sketchy Ponderings</h1>
