--- a/story2.html
+++ b/story2.html
@@ -151,11 +151,11 @@
   </div>
 
   <div class="story-container">
-    <p class="line">The shelf was nothing special—</p>
+    <p class="line">The shelf was nothing special...</p>
     <p class="line">three crooked tiers of pine and nails,</p>
     <p class="line">painted long ago in the color of warm honey.</p>
 
-    <p class="line">But there were things upon it—</p>
+    <p class="line">But there were things upon it...</p>
     <p class="line">not valuable, not grand,</p>
     <p class="line">but full of meaning just the same.</p>
 
@@ -166,17 +166,17 @@
 
     <p class="line">A tiny blue bottle with a crackled glaze.</p>
     <p class="line">A stack of books whose spines had softened with rereading.</p>
-    <p class="line">A faded flower in a chipped vase—</p>
+    <p class="line">A faded flower in a chipped vase...</p>
     <p class="line">still leaning toward light.</p>
 
     <p class="line">None of it was meant to last forever.</p>
     <p class="line">But somehow, in the quiet,</p>
-    <p class="line">the objects held a kind of whisper—</p>
+    <p class="line">the objects held a kind of whisper...</p>
     <p class="line">a hush that said:</p>
 
     <p class="line">You are seen.</p>
     <p class="line">You are loved.</p>
-    <p class="line">Even the smallest things can hold the whole sky—</p>
+    <p class="line">Even the smallest things can hold the whole sky...</p>
     <p class="line">if you’re willing to notice.</p>
   </div>
 
