--- a/story3.html
+++ b/story3.html
@@ -152,7 +152,7 @@
 
   <div class="story-container">
     <p class="line">It leans slightly, like it’s tired from watching the wind.</p>
-    <p class="line">A tree in the marsh, neither tall nor proud—</p>
+    <p class="line">A tree in the marsh, neither tall nor proud...</p>
     <p class="line">but still standing.</p>
 
     <div class="image-block">
@@ -166,7 +166,7 @@
 
     <p class="line">People come when their hearts are too loud.</p>
     <p class="line">They sit in the moss. Say nothing. Or everything.</p>
-    <p class="line">And the tree receives it all—</p>
+    <p class="line">And the tree receives it all...</p>
     <p class="line">not to remember, but to hold.</p>
 
     <p class="line">The wind brushes its leaves like breath.</p>
