--- a/story3.html
+++ b/story3.html
@@ -172,7 +172,7 @@
     <p class="line">The wind brushes its leaves like breath.</p>
     <p class="line">The fog gathers at its roots like prayer.</p>
 
-    <p class="line">And still it listens—</p>
+    <p class="line">And still it listens...</p>
     <p class="line">for the grief that has no words,</p>
     <p class="line">and the joy too sacred to name.</p>
   </div>
