--- a/sigil-oracle.html
+++ b/sigil-oracle.html
@@ -185,11 +185,12 @@
     input.classList.add('pulse-glow');
 
     try {
-      const response = await fetch('https://sigil-oracle-server.monahanhunt.repl.co/oracle', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ question })
-      });
+     const response = await fetch('https://sigil-oracle-server--monahanhunt.replit.app/oracle', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({ question })
+});
+
 
       const data = await response.json();
       phrase.textContent = data.response || 'The veil has no answer today.';
