--- a/sigil-oracle.html
+++ b/sigil-oracle.html
@@ -184,12 +184,13 @@
     input.disabled = true;
     input.classList.add('pulse-glow');
 
-    try {
-     const response = await fetch('https://sigil-oracle-server--monahanhunt.replit.app/oracle', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({ question })
-});
+   try {
+  const response = await fetch('https://sigil-oracle-server.onrender.com/oracle', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ question })
+  });
+
 
 
 
