--- a/sigil-oracle.html
+++ b/sigil-oracle.html
@@ -169,14 +169,20 @@
     &copy; 2025 Sketchy Ponderings — quietly relentless.
   </footer>
 
- <script>
+<script>
+  function getRandomSigilPath() {
+    const sigilCount = 17; // adjust this to match the number of sigil images you have
+    const index = Math.floor(Math.random() * sigilCount) + 1;
+    return `images/sigil${index}.png`;
+  }
+
   async function drawSigil() {
     const img = document.getElementById('sigilImage');
     const phrase = document.getElementById('sigilPhrase');
     const input = document.getElementById('questionInput');
     const question = input.value.trim() || "No question";
 
-    // Show placeholder sigil image while waiting (optional)
+    // Loading state
     img.src = 'images/sigil-placeholder.png';
     img.classList.add('visible');
     phrase.textContent = 'Listening...';
@@ -184,20 +190,18 @@
     input.disabled = true;
     input.classList.add('pulse-glow');
 
-   try {
-  const response = await fetch('https://sigil-oracle-server.onrender.com/oracle', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({ question })
-});
-
-
-
-
+    try {
+      const response = await fetch('https://sigil-oracle-server.onrender.com/oracle', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ question })
+      });
 
       const data = await response.json();
       phrase.textContent = data.response || 'The veil has no answer today.';
 
+      // ✨ Display a random sigil
+      img.src = getRandomSigilPath();
     } catch (err) {
       phrase.textContent = '⚠️ The Oracle could not be reached.';
     }
@@ -213,6 +217,7 @@
     }, 7000);
   }
 </script>
+
 
 </body>
 </html>
