--- a/sigil-oracle.html
+++ b/sigil-oracle.html
@@ -220,6 +220,14 @@
       input.classList.remove('pulse-glow');
     }, 7000);
   }
+   // Enable "Enter" key to trigger drawSigil
+  document.getElementById('questionInput').addEventListener('keydown', function(event) {
+    if (event.key === 'Enter') {
+      event.preventDefault(); // prevent form submission or page reload
+      drawSigil();
+    }
+  });
+</script>
 </script>
 
 
