--- a/stories.html
+++ b/stories.html
@@ -151,18 +151,18 @@
 
   <div class="story-list">
     <div class="story">
-      <h2><a href="story1.html">A Tale of Flowers and Robots</a></h2>
-      <p>A robot wanders beyond the walls of logic and finds something wild blooming in the silence...</p>
+      <h2><a href="story1.html">Handwarmers</a></h2>
+      <p>A mouse takes refuge in a slipper on a cold winter night, leading to an unexpected morning discovery...</p>
     </div>
 
     <div class="story">
-      <h2><a href="story2.html">Even the Smallest Things</a></h2>
-      <p>A wooden shelf. A bottle of stars. A reminder that noticing is an act of creation...</p>
+      <h2><a href="story2.html">Wing and Foot</a></h2>
+      <p>A jog to Cherry Pond turns into a magical race with a butterfly, blurring the line between human and nature...</p>
     </div>
 
     <div class="story">
-      <h2><a href="story3.html">The Listening Tree</a></h2>
-      <p>They say the marsh holds a tree that listens—not with ears, but with memory...</p>
+      <h2><a href="story3.html">The Hollow Stone</a></h2>
+      <p>A winter hike leads through a cracked boulder into a hidden grove, revealing a silent gathering of moose...</p>
     </div>
   </div>
 
