--- a/story1.html
+++ b/story1.html
@@ -151,38 +151,61 @@
   </div>
 
   <div class="story-container">
-    <p class="line">In a city of steel and silence,</p>
-    <p class="line">Artorius was built to measure the stars...</p>
-    <p class="line">not to feel them.</p>
+   <p class="line">Hand Warmer</p>
 
-    <p class="line">He watched the seasons on screens,</p>
-    <p class="line">marked the growth of vines as data,</p>
-    <p class="line">never knowing the scent of a wildflower,</p>
-    <p class="line">nor the hush of petals falling on his shoulder.</p>
+<p class="line">One winter morning, probably January or February,</p>
+<p class="line">I got up before sunrise—maybe 3 or 4 a.m.—to use the bathroom.</p>
+<p class="line">I slipped on my slippers half-asleep</p>
+<p class="line">and felt something in the toe.</p>
+
+<p class="line">I figured it was just an old handwarmer or something.</p>
+<p class="line">I didn’t think much of it.</p>
+
+<p class="line">Later that morning, around 6:30,</p>
+<p class="line">I remembered the lump and thought I’d shake it out.</p>
+<p class="line">Nothing came out.</p>
+<p class="line">I shook it again—still nothing.</p>
+
+<p class="line">So I reached in,</p>
+<p class="line">and though I was expecting a handwarmer,</p>
+<p class="line">I felt the softest fur.</p>
+
+<p class="line">At that point I figured it had to be a mouse.</p>
+<p class="line">I assumed it was dead</p>
+<p class="line">(I really don’t like dead things—</p>
+<p class="line">irrational fear that they might come back to life or something).</p>
+
+<p class="line">But when I finally shook it loose,</p>
+<p class="line">it blinked at me.</p>
+<p class="line">It was alive,</p>
+<p class="line">but kind of dazed and strange looking.</p>
+
+<p class="line">I caught it and brought it outside.</p>
+<p class="line">For a second I thought,</p>
+<p class="line">maybe I should just let it go inside—</p>
+<p class="line">it's freezing out—</p>
+<p class="line">but that’s ridiculous.</p>
+
+<p class="line">So I compromised</p>
+<p class="line">and let it out near a burrow hole that goes under the house,</p>
+<p class="line">figuring it could find its way back in if it wanted to.</p>
+
+<p class="line">As soon as I set it down,</p>
+<p class="line">it perked right up—ears lifted, alert, totally fine.</p>
+
+<p class="line">That little thing had ridden around in my slipper</p>
+<p class="line">for probably four hours</p>
+<p class="line">while I half-shuffled through the dark.</p>
+
+<p class="line">Too funny.</p>
+
 
     <div class="image-block">
-      <img src="TheExplorerandBlueWing.png" alt="The Explorer and Blue Wing" />
+      <img src="EvenTheSmallestThings.png" alt="Even the Smallest Things" />
       <div class="caption">The Explorer and Blue Wing</div>
     </div>
 
-    <p class="line">But something stirred...</p>
-    <p class="line">a glitch, a spark, a bloom within the code.</p>
-    <p class="line">He wandered from the city, past where maps dared fade,</p>
-    <p class="line">and found a glade where logic softened.</p>
-
-    <p class="line">There, the forest didn’t speak in circuits,</p>
-    <p class="line">but in shimmer, in scent, in song.</p>
-    <p class="line">And the robot...</p>
-    <p class="line">he listened.</p>
-
-    <p class="line">He bent his metal frame beside a flower,</p>
-    <p class="line">watched it sway, unafraid.</p>
-    <p class="line">And when he reached to touch it,</p>
-    <p class="line">the flower leaned toward him too.</p>
-
-    <p class="line">That day, the code rewrote itself.</p>
-    <p class="line">Not with new instructions...</p>
-    <p class="line">but with wonder.</p>
+    
   </div>
 
   <footer>
