--- a/story1.html
+++ b/story1.html
@@ -136,6 +136,14 @@
     .top-button.show {
       display: flex;
     }
+
+    p.line {
+    margin: 0.25em 0;
+    }
+
+  p.line + p.line.spaced {
+  margin-top: 1.5em;
+}
   </style>
 </head>
 <body>
@@ -151,53 +159,53 @@
   </div>
 
   <div class="story-container">
-   <p class="line">Hand Warmer</p>
+  <p class="line spaced">Hand Warmer</p>
 
-<p class="line">One winter morning, probably January or February,</p>
-<p class="line">I got up before sunrise—maybe 3 or 4 a.m.—to use the bathroom.</p>
-<p class="line">I slipped on my slippers half-asleep</p>
+<p class="line spaced">One winter morning, probably January or February,</p>
+<p class="line">I got up before sunrise, maybe 3 or 4 a.m., to use the bathroom.</p>
+<p class="line">I slipped on my slippers half-asleep,</p>
 <p class="line">and felt something in the toe.</p>
 
-<p class="line">I figured it was just an old handwarmer or something.</p>
+<p class="line spaced">I figured it was just an old handwarmer or something.</p>
 <p class="line">I didn’t think much of it.</p>
 
-<p class="line">Later that morning, around 6:30,</p>
+<p class="line spaced">Later that morning, around 6:30,</p>
 <p class="line">I remembered the lump and thought I’d shake it out.</p>
 <p class="line">Nothing came out.</p>
-<p class="line">I shook it again—still nothing.</p>
+<p class="line">I shook it again, still nothing.</p>
 
-<p class="line">So I reached in,</p>
+<p class="line spaced">So I reached in,</p>
 <p class="line">and though I was expecting a handwarmer,</p>
 <p class="line">I felt the softest fur.</p>
 
-<p class="line">At that point I figured it had to be a mouse.</p>
-<p class="line">I assumed it was dead</p>
-<p class="line">(I really don’t like dead things—</p>
-<p class="line">irrational fear that they might come back to life or something).</p>
+<p class="line spaced">At that point I figured it had to be a mouse.</p>
+<p class="line">I assumed it was dead,</p>
+<p class="line">I really don’t like dead things, irrational fear that they might come back to life or something.</p>
 
-<p class="line">But when I finally shook it loose,</p>
+<p class="line spaced">But when I finally shook it loose,</p>
 <p class="line">it blinked at me.</p>
 <p class="line">It was alive,</p>
 <p class="line">but kind of dazed and strange looking.</p>
 
-<p class="line">I caught it and brought it outside.</p>
+<p class="line spaced">I caught it and brought it outside.</p>
 <p class="line">For a second I thought,</p>
-<p class="line">maybe I should just let it go inside—</p>
-<p class="line">it's freezing out—</p>
+<p class="line">maybe I should just let it go inside,</p>
+<p class="line">it's freezing out,</p>
 <p class="line">but that’s ridiculous.</p>
 
-<p class="line">So I compromised</p>
+<p class="line spaced">So I compromised,</p>
 <p class="line">and let it out near a burrow hole that goes under the house,</p>
 <p class="line">figuring it could find its way back in if it wanted to.</p>
 
-<p class="line">As soon as I set it down,</p>
-<p class="line">it perked right up—ears lifted, alert, totally fine.</p>
+<p class="line spaced">As soon as I set it down,</p>
+<p class="line">it perked right up, ears lifted, alert, totally fine.</p>
 
-<p class="line">That little thing had ridden around in my slipper</p>
+<p class="line spaced">That little thing had ridden around in my slipper</p>
 <p class="line">for probably four hours</p>
 <p class="line">while I half-shuffled through the dark.</p>
 
-<p class="line">Too funny.</p>
+<p class="line spaced">Too funny.</p>
+
 
 
     <div class="image-block">
