--- a/story1.html
+++ b/story1.html
@@ -149,7 +149,7 @@
 <body>
   <div class="mist-overlay"></div>
 
-  <h1>A Tale of Flowers and Robots</h1>
+  <h1>Hand Warmers</h1>
 
   <div class="nav">
     <a href="index.html">Home</a>
@@ -159,7 +159,7 @@
   </div>
 
   <div class="story-container">
-  <p class="line spaced">Hand Warmer</p>
+ 
 
 <p class="line spaced">One winter morning, probably January or February,</p>
 <p class="line">I got up before sunrise, maybe 3 or 4 a.m., to use the bathroom.</p>
