--- a/story1.html
+++ b/story1.html
@@ -210,7 +210,7 @@
 
     <div class="image-block">
       <img src="EvenTheSmallestThings.png" alt="Even the Smallest Things" />
-      <div class="caption">The Explorer and Blue Wing</div>
+      <div class="caption">Even the Smallest Things</div>
     </div>
 
     
