--- a/story1.html
+++ b/story1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Handwarmer — Sketchy Ponderings</title>
+  <title>Hand Warmer — Sketchy Ponderings</title>
   <style>
     * {
       box-sizing: border-box;
@@ -149,7 +149,7 @@
 <body>
   <div class="mist-overlay"></div>
 
-  <h1>Hand Warmers</h1>
+  <h1>Hand Warmer</h1>
 
   <div class="nav">
     <a href="index.html">Home</a>
@@ -161,36 +161,42 @@
   <div class="story-container">
  
 
-<p class="line spaced">One winter morning, probably January or February, I got up before sunrise, maybe 3 or 4 a.m., to use the bathroom.</p>
-<p class="line">I slipped on my slippers half-asleep,and felt something in the toe.</p>
 
-<p class="line spaced">I figured it was just an old handwarmer or something.</p>
-<p class="line">I didn’t think much of it.</p>
 
-<p class="line spaced">Later that morning, around 6:30, I remembered the lump and thought I’d shake it out.</p>
-<p class="line">Nothing came out. I shook it again, still nothing.</p>
+<p class="line spaced">One winter morning, probably January or February, I got up before sunrise—maybe 3 or 4 a.m.—to use the bathroom.</p>
+<p class="line">I slipped on my slippers half-asleep, and felt something in the toe.</p>
 
-<p class="line spaced">So I reached in, and though I was expecting a handwarmer,</p>
-<p class="line">I felt the softest fur.</p>
+<p class="line spaced">I figured it was just an old handwarmer or something, y’know? Didn’t think much of it.</p>
 
-<p class="line spaced">At that point I figured it had to be a mouse. >I assumed it was dead,</p>
-<p class="line">I really don’t like dead things, irrational fear that they might come back to life or something.</p>
+<p class="line spaced">Later that morning—around 6:30—I remembered the lump and thought, “I should shake that out.”</p>
+<p class="line">Nothing came out. I shook it again—still nothing.</p>
 
-<p class="line spaced">But when I finally shook it loose, it blinked at me.</p>
-<p class="line">It was alive, but kind of dazed and strange looking.</p>
+<p class="line spaced">So I reached in, expecting, I don’t know, fabric maybe, but instead—</p>
+<p class="line">I felt fur. The softest fur.</p>
 
-<p class="line spaced">I caught it and brought it outside. For a second I thought,</p>
-<p class="line">maybe I should just let it go inside, it's freezing out, but that’s ridiculous.</p>
+<p class="line spaced">At that point I figured, alright, it’s probably a mouse.</p>
+<p class="line">I assumed it was dead. I really don’t like dead things—</p>
+<p class="line">irrational fear that they might, I don’t know, come back to life or something.</p>
 
-<p class="line spaced">So I compromised, and let it out near a burrow hole that goes under the house,</p>
-<p class="line">figuring it could find its way back in if it wanted to.</p>
+<p class="line spaced">But then I shook it loose,</p>
+<p class="line">and it blinked at me.</p>
+<p class="line">Alive. Just... dazed. Weird-looking, honestly.</p>
 
-<p class="line spaced">As soon as I set it down, >it perked right up, ears lifted, alert, totally fine.</p>
+<p class="line spaced">So I caught it and brought it outside.</p>
+<p class="line">For a second I thought, “Should I let it stay in? It’s freezing.”</p>
+<p class="line">But no—that’s ridiculous.</p>
 
-<p class="line spaced">That little thing had ridden around in my slipper for probably four hours</p>
-<p class="line">while I half-shuffled through the dark.</p>
+<p class="line spaced">So I compromised. Set it down near a burrow hole under the house,</p>
+<p class="line">figuring if it wanted back in, it knew the way.</p>
+
+<p class="line spaced">And the second I set it down—</p>
+<p class="line">it perked right up. Ears lifted. Totally alert. Totally fine.</p>
+
+<p class="line spaced">That little thing had ridden around in my slipper</p>
+<p class="line">for probably four hours, while I half-shuffled through the dark.</p>
 
 <p class="line spaced">Too funny.</p>
+
 
 
 
