--- a/story1.html
+++ b/story1.html
@@ -183,17 +183,17 @@
 <p class="line">Alive. Just... dazed. Weird-looking, honestly.</p>
 
 <p class="line spaced">So I caught it and brought it outside.</p>
-<p class="line">For a second I thought, “Should I let it stay in? It’s freezing.”</p>
+<p class="line">For a second I thought, “Should I let it stay inside? It’s freezing out.”</p>
 <p class="line">But no, that’s ridiculous.</p>
 
-<p class="line spaced">So I compromised. Set it down near a burrow hole under the house,</p>
-<p class="line">figuring if it wanted back in, it knew the way.</p>
+<p class="line spaced">So I compromised. I Set it down near a burrow hole under the house,</p>
+<p class="line">figuring if it wanted to get back in, it knew the way.</p>
 
 <p class="line spaced">And the second I set it down, </p>
-<p class="line">it perked right up. Ears lifted. Totally alert. Totally fine.</p>
+<p class="line">it perked right up. Ears lifted. Totally alert. Totally fine. And it ran away.</p>
 
-<p class="line spaced">That little thing had ridden around in my slipper</p>
-<p class="line">for probably four hours, while I half-shuffled through the dark.</p>
+<p class="line spaced">That little cutie had ridden around in my slipper</p>
+<p class="line">for probably four hours, while I shuffled in the dark.</p>
 
 <p class="line spaced">Too funny...</p>
 
