--- a/story2.html
+++ b/story2.html
@@ -151,33 +151,31 @@
   </div>
 
   <div class="story-container">
-    <p class="line">The shelf was nothing special...</p>
-    <p class="line">three crooked tiers of pine and nails,</p>
-    <p class="line">painted long ago in the color of warm honey.</p>
+    <p class="line spaced">Wing and Foot</p>
 
-    <p class="line">But there were things upon it...</p>
-    <p class="line">not valuable, not grand,</p>
-    <p class="line">but full of meaning just the same.</p>
+<p class="line spaced">I was jogging down to Cherry Pond one day, probably spring or early summer, and I passed this cluster of butterflies all gathered on the ground.</p>
+<p class="line">As I ran past, they stirred and flew up, just this beautiful little cloud of wings.</p>
+
+<p class="line spaced">I kept jogging, but I noticed one butterfly sort of kept pace with me.</p>
+<p class="line">Then it passed me. It stayed right on the trail like it was leading me somewhere.</p>
+
+<p class="line spaced">So I sped up and passed it again. And then it passed me.</p>
+<p class="line">We started this little game, me and the butterfly, taking turns being in front.</p>
+<p class="line">It wasn’t fast, but it felt... meaningful.</p>
+
+<p class="line spaced">And then at one point, I’m sprinting at full speed, as fast as I could go, and it’s still there right next to me.</p>
+<p class="line">We’re moving together, same direction, same speed.</p>
+<p class="line">And I swear, for a second, we were running side by side.</p>
+
+<p class="line spaced">It was just... magical.</p>
+
 
     <div class="image-block">
-      <img src="EvenTheSmallestThings.png" alt="Even The Smallest Things artwork" />
-      <div class="caption">Even the Smallest Things</div>
+      <img src="TheExplorerandBlueWing.png" alt="The Explorer and BlueWing artwork" />
+      <div class="caption">The Explorer and BlueWing</div>
     </div>
 
-    <p class="line">A tiny blue bottle with a crackled glaze.</p>
-    <p class="line">A stack of books whose spines had softened with rereading.</p>
-    <p class="line">A faded flower in a chipped vase...</p>
-    <p class="line">still leaning toward light.</p>
-
-    <p class="line">None of it was meant to last forever.</p>
-    <p class="line">But somehow, in the quiet,</p>
-    <p class="line">the objects held a kind of whisper...</p>
-    <p class="line">a hush that said:</p>
-
-    <p class="line">You are seen.</p>
-    <p class="line">You are loved.</p>
-    <p class="line">Even the smallest things can hold the whole sky...</p>
-    <p class="line">if you’re willing to notice.</p>
+   
   </div>
 
   <footer>
