--- a/story2.html
+++ b/story2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Even the Smallest Things — Sketchy Ponderings</title>
+  <title>Wing and Foot — Sketchy Ponderings</title>
   <style>
     * {
       box-sizing: border-box;
@@ -141,7 +141,7 @@
 <body>
   <div class="mist-overlay"></div>
 
-  <h1>Even the Smallest Things</h1>
+  <h1>Wing and Foot</h1>
 
   <div class="nav">
     <a href="index.html">Home</a>
@@ -151,7 +151,7 @@
   </div>
 
   <div class="story-container">
-    <p class="line spaced">Wing and Foot</p>
+  
 
 <p class="line spaced">I was jogging down to Cherry Pond one day, probably spring or early summer, and I passed this cluster of butterflies all gathered on the ground.</p>
 <p class="line">As I ran past, they stirred and flew up, just this beautiful little cloud of wings.</p>
