--- a/story2.html
+++ b/story2.html
@@ -161,13 +161,13 @@
 
 <p class="line spaced">So I sped up and passed it again. And then it passed me.</p>
 <p class="line">We started this little game, me and the butterfly, taking turns being in front.</p>
-<p class="line">It wasn’t fast, but it felt... meaningful.</p>
+<p class="line">It wasn’t fast, it felt like being in play with the universe.</p>
 
-<p class="line spaced">And then at one point, I’m sprinting at full speed, as fast as I could go, and it’s still there right next to me.</p>
+<p class="line spaced">And then at one point, I’m sprinting at full speed, as fast as I could go, and it’s still there... right next to me.</p>
 <p class="line">We’re moving together, same direction, same speed.</p>
 <p class="line">And I swear, for a second, we were running side by side.</p>
 
-<p class="line spaced">It was just... magical.</p>
+<p class="line spaced">It was just a few moments that felt really magical.</p>
 
 
     <div class="image-block">
