--- a/story3.html
+++ b/story3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Listening Tree — Sketchy Ponderings</title>
+  <title>The Hollow Stone — Sketchy Ponderings</title>
   <style>
     * {
       box-sizing: border-box;
@@ -141,7 +141,7 @@
 <body>
   <div class="mist-overlay"></div>
 
-  <h1>The Listening Tree</h1>
+  <h1>The Hollow Stone</h1>
 
   <div class="nav">
     <a href="index.html">Home</a>
@@ -151,30 +151,35 @@
   </div>
 
   <div class="story-container">
-    <p class="line">It leans slightly, like it’s tired from watching the wind.</p>
-    <p class="line">A tree in the marsh, neither tall nor proud...</p>
-    <p class="line">but still standing.</p>
-
+   
     <div class="image-block">
-      <img src="YellowLandscape.png" alt="Yellow Landscape artwork" />
-      <div class="caption">Yellow Landscape</div>
+      <img src="Birch.png" alt="Whispers in the Birch" />
+      <div class="caption">Whispers in the Birch</div>
     </div>
 
-    <p class="line">They call it the Listening Tree.</p>
-    <p class="line">Not because it speaks,</p>
-    <p class="line">but because it never interrupts.</p>
 
-    <p class="line">People come when their hearts are too loud.</p>
-    <p class="line">They sit in the moss. Say nothing. Or everything.</p>
-    <p class="line">And the tree receives it all...</p>
-    <p class="line">not to remember, but to hold.</p>
 
-    <p class="line">The wind brushes its leaves like breath.</p>
-    <p class="line">The fog gathers at its roots like prayer.</p>
+<p class="line spaced">My friend and I were winter hiking up Sugarloaf Mountain. It was April, warm and muddy in town, but still full winter up in the woods.</p>
 
-    <p class="line">And still it listens...</p>
-    <p class="line">for the grief that has no words,</p>
-    <p class="line">and the joy too sacred to name.</p>
+<p class="line spaced">We were working our way up when we came face to face with a moose in the trail.</p>
+<p class="line">If you’ve never stood near a moose in the wild, their heads are basically the size of your whole body.</p>
+<p class="line">It just stared at us. We stared back.</p>
+
+<p class="line spaced">We decided to backtrack and look for a way around.</p>
+<p class="line">I remembered a big split rock nearby, this massive boulder cracked in half by frost, just enough space to crouch-walk through.</p>
+<p class="line">So we cut through that, this little cave, and came out the other side...</p>
+
+<p class="line spaced">And there was another moose.</p>
+
+<p class="line spaced">But this time, as we stood there, more and more started to move.</p>
+<p class="line">One by one, they stepped out from the trees or turned their heads,</p>
+<p class="line">and we realized we’d walked straight into a whole group of moose that had just been standing there, totally blended into the forest.</p>
+
+<p class="line spaced">It was unreal. Like we’d stepped through a portal or something</p>
+<p class="line">and found ourselves in some ancient, hidden place.</p>
+
+<p class="line spaced">Still one of the coolest, most haunting moments I’ve ever had in the woods.</p>
+
   </div>
 
   <footer>
