--- a/story3.html
+++ b/story3.html
@@ -153,8 +153,8 @@
   <div class="story-container">
    
     <div class="image-block">
-      <img src="Birch.png" alt="Whispers in the Birch" />
-      <div class="caption">Whispers in the Birch</div>
+      <img src="BlueLandscape.png" alt="Blue Landscape" />
+      <div class="caption">Blue Landscape</div>
     </div>
 
 
