--- a/story2.html
+++ b/story2.html
@@ -136,6 +136,13 @@
     .top-button.show {
       display: flex;
     }
+    p.line {
+    margin: 0.2em 0;
+    }
+
+  p.line + p.line.spaced {
+  margin-top: 2em;
+    
   </style>
 </head>
 <body>
