--- a/story1.html
+++ b/story1.html
@@ -193,7 +193,7 @@
 <p class="line">it perked right up. Ears lifted. Totally alert. Totally fine. And it ran away.</p>
 
 <p class="line spaced">That little cutie had ridden around in my slipper</p>
-<p class="line">for probably four hours, while I shuffled in the dark.</p>
+<p class="line">for probably four hours, while I shuffled to the bathroom and back. Then it just hid there in the dark.</p>
 
 <p class="line spaced">Too funny...</p>
 
