--- a/story3.html
+++ b/story3.html
@@ -169,7 +169,7 @@
 <p class="line spaced">My friend and I were winter hiking up Sugarloaf Mountain. It was April, warm and muddy in town, but still full winter up in the woods.</p>
 
 <p class="line spaced">We were working our way up when we came face to face with a moose in the trail.</p>
-<p class="line">If you’ve never stood near a moose in the wild, their heads are basically the size of your whole body.</p>
+<p class="line">If you’ve ever stood near a moose in the wild you know that their heads are basically the size of your whole body.</p>
 <p class="line">It just stared at us. We stared back.</p>
 <p class="line">It had big blonde puffs of fur from knee to hoof. had the styling of a clydesdale, but somehow bigger and more majestic.</p>
 
