--- a/story3.html
+++ b/story3.html
@@ -171,7 +171,7 @@
 <p class="line spaced">We were working our way up when we came face to face with a moose in the trail.</p>
 <p class="line">If you’ve ever stood near a moose in the wild you know that their heads are basically the size of your whole body.</p>
 <p class="line">It just stared at us. We stared back.</p>
-<p class="line">It had big blonde puffs of fur from knee to hoof. had the styling of a clydesdale, but somehow bigger and more majestic.</p>
+<p class="line">It had big blonde puffs of fur from knee to hoof. had the styling of a clydesdale, but somehow bigger and more majestic. Truly surreal.</p>
 
 <p class="line spaced">We decided to backtrack and look for a way around.</p>
 <p class="line">I remembered a big split rock nearby, this massive boulder cracked in half by frost, just enough space to crouch-walk through.</p>
