--- a/story3.html
+++ b/story3.html
@@ -171,7 +171,7 @@
 <p class="line spaced">We were working our way up when we came face to face with a moose in the trail.</p>
 <p class="line">If you’ve ever stood near a moose in the wild you know that their heads are basically the size of your whole body.</p>
 <p class="line">It just stared at us. We stared back.</p>
-<p class="line">It had big blonde puffs of fur from knee to hoof. had the styling of a clydesdale, but somehow bigger and more majestic. Truly surreal.</p>
+<p class="line">It had big blond puffs of fur from knee to hoof. It had the styling of a clydesdale, but somehow bigger and more majestic. Truly surreal.</p>
 
 <p class="line spaced">We decided to backtrack and look for a way around.</p>
 <p class="line">I remembered a big split rock nearby, this massive boulder cracked in half by frost, just enough space to crouch-walk through.</p>
@@ -183,7 +183,7 @@
 <p class="line">One by one, they stepped out from the trees or turned their heads,</p>
 <p class="line">and we realized we’d walked straight into a whole group of moose that had just been standing there, totally blended into the forest.</p>
 
-<p class="line spaced">It was unreal. Like we’d stepped through a portal or something</p>
+<p class="line spaced">Again it felt sureal. Like we’d stepped through a portal or something</p>
 <p class="line">and found ourselves in some ancient, hidden place.</p>
 
 <p class="line spaced">Still one of the coolest, most haunting moments I’ve ever had in the woods.</p>
